--- a/index.html
+++ b/index.html
@@ -5,24 +5,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { 
+      font-size: 11px;
+      text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    body {
+    background-color:hsl(212, 45%, 89%);
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Outfit';
+    font-weight: 400;
+    margin: 0;
+  
+  }
+    .card {
+    width: 220px;
+    background-color: hsl(0, 0%, 100%) ;
+    padding: 12px;
+    border-radius: 16px;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+    text-align: center;}
+  .card img{
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    margin-bottom: 20px;
+
+  }
+  .main-content{
+    flex: 1;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .card h2{
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin: 16px 0 12px 0;
+  }
+  .card p{
+    font-size: 1rem;
+    font-weight: 400;
+    color:  hsl(216, 15%, 48%);
+    margin: 0 0 8px 0;
+  }
+    
   </style>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <div class="main-content">
+    <div class="card" >
+      <img src="images/image-qr-code.png" alt="qr-code" >
+      <h2> Improve your front-end skills by building projects</h2>
+      <p>
+      Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+      </p>
+    </div>
+  </div>
+ 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Dolapo</a>.
   </div>
 </body>
 </html>
